--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "b24-deal-batcher",
   "version": "1.0.0",
+  "description": "Bitrix24 deal batch tagger + Telegram UI",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "server": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "cli": "ts-node src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc -p .",
-    "start": "node dist/server.js"
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "telegraf": "^4.12.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
