--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "b24-deal-batcher",
   "version": "1.0.0",
+  "description": "Mass tagging tool for Bitrix24 deals (groups of 150). Local app for Bitrix installation + CLI",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "server": "ts-node-dev --respawn --transpile-only src/server.ts",
     "cli": "ts-node src/index.ts",
     "build": "tsc -p .",
-    "start": "node dist/server.js"
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "axios": "^1.7.7",
